--- a/web/changelog.txt
+++ b/web/changelog.txt
@@ -1,3 +1,6 @@
+1.8.4.4
+- Made [tag] links colored a bit differently.
+
 1.8.4.3
 - Added a bit of compatability with Chrome's internal userscript manager. Still can't play Youtube videos without Tampermonkey.
 
