--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.9.6
+- Removed unnecessary id for Vimeo player
+- Fixed an issue with backlink sound loading
+
 1.9.5
 - Thread auto-update management on Foolz
 
