--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿1.10.3.2
+﻿1.10.3.3
+- Made video previews function better on the right side of the screen
+- Made settings appear over the player
+
+1.10.3.2
 - Fixed redundant HTMLing in video titles in the player
 
 1.10.3.1
