--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿2.0
+﻿2.0.1
+- Soundcloud profile link fixing
+- Some style changes
+
+2.0
 - Soundcloud support
 - Smoother seeking in vimeo videos
 
