--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿2.0.1
+﻿2.0.1.1
+- Soundcloud link checking works a bit differently
+- Un-decodable sounds will be removed from the player
+
+2.0.1
 - Soundcloud profile link fixing
 - Some style changes
 
