--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿2.1.4.1
+﻿2.1.5
+- Made [Media Player] appear when using appchan x
+- Style fixes for 4chan style script
+
+2.1.4.1
 - Increased timer for 403s
 
 2.1.4
