--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
-﻿3.0.1
+﻿3.0.2
+- CSS fixes
+- Better submit button management?
+- Possible ability to use 4chan pass?
+
+3.0.1
 - Re-ordered some code
 - Made tag updating change the byte count
 - Made this script not ALWAYS block the other script
