--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-﻿3.1
+﻿3.1.1
+- Captcha reloads automatically
+
+3.1
 - Added drag + dropping
 - Added the ability for files to not need to be re-encoded
 - Fixed a captcha refresh bug
