--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿3.1.2.1
+﻿3.1.3
+- Made threads auto-update on submit
+- Pressing enter in the captcha field now submits
+
+3.1.2.1
 - Fixed a bug where the submit button would disable itself
 - Added info about "blocked uploader"
 
