--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿3.1.3.3
+﻿3.1.4
+- Added an option for auto-update after posting
+- Made the file box clear on appchanx
+
+3.1.3.3
 - Changed the auto-refresh to have a 1.5 second timeout
 
 3.1.3.2
