--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-﻿4.0
+﻿4.0.1
+- Using updated ve_api; now shows the image on sound-only files
+
+4.0
 - Added Videncode playback
 - Added ability to play on the blank /play page on the homepage, for testing
 - Fixed an issue when using the inline extension on a board without spoilers, the sounds checkbox wouldn't appear
