--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-﻿4.1
+﻿4.1.1
+- Disabled post group parsing by default so it can be debugged more
+
+4.1
 - Made Videncode images show up properly in the "list" section when a video is present
 - Added a seek time indicator to the player
 - Made the thread parser use a queue to possibly decrease lag time on load
