--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
-﻿4.2
+﻿4.3
+- Asynchronous options for loading sounds
+- The media player now uses a queue to load items
+- Changed some naming conventions
+
+4.2
 - Upgrades to the downloading system; now uses filenames for the files
 - Some bugfixes for group/post parsing; still disabled by default though
 - ve_api update; uses CSS transitions vs animations
