--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
-﻿4.4.4
+﻿4.5
+- Better compatibility with 4chan-x 3
+- Slight re-arrangement of some of the settings locations
+- Update of the thread controls location and how it executes
+- Bugfixes on the archive
+- Bugfixes for badly loading a post
+
+4.4.4
 - Added compatibility with 4chan-x 3
 
 4.4.3
