--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-﻿4.5.1.1
+﻿4.5.1.2
+- Fixed .png decoding hanging on failure
+
+4.5.1.1
 - Using an updated ve_api to fix a rare bug where the video wouldn't be visible when it was playing
 
 4.5.1
