--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-﻿5.0.0.1.1
+﻿5.0.0.2
+- Removed the "Load All Sounds" link from everything except the drop down menu
+
+5.0.0.1.1
 - Fixed video URL underlines
 
 5.0.0.1
