--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿5.0.1.2
+﻿5.0.2
+- Updated parsing of Youtube URLs
+- Made the script take over links created by 4chan-x that look like "something.xx" (youtu.be for example)
+
+5.0.1.2
 - Fixed a bug where Chrome users would have to view the readme again if 4cs was already installed
 
 5.0.1.1
