--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-﻿5.0.3
+﻿5.0.4
+- Added option to change "sounds" text
+
+5.0.3
 - Fixed a compatability issue with ExLinks related to URL replacement
 
 5.0.2
