--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-﻿5.1
+﻿5.1.0.1
+- Made the settings link appear at the top again for all browsers
+
+5.1
 - Sound embedded in .webm files now works
 - A few bugfixes
 
